syntax = "proto3";

option java_multiple_files = true;
option java_package = "ChannelMappingServiceLib";
option java_outer_classname = "ChannelMappingServiceProto";

// Note: service name will be the prefix of the gRPC Bean
service ChannelMappingService {
  rpc findChannelId (findChannelIdRequest) returns (findChannelIdResponse) {}
}

message findChannelIdRequest {
  string user1 = 1;
  string user2 = 2;
}

message findChannelIdResponse {
  string channel_id = 1;
}
